05-fast-api-bootcamp

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,51 @@
-FastAPI-The-Complete-Course-main/
+# =========================
+# Python bytecode / cache
+# =========================
+__pycache__/
+*.py[cod]
+*.pyo
+
+# =========================
+# Virtual environments
+# =========================
+venv/
+.venv/
+env/
+ENV/
+
+# =========================
+# Environment variables
+# =========================
+.env
+.env.*
+
+# =========================
+# Databases
+# =========================
+*.db
+*.sqlite
+*.sqlite3
+
+# =========================
+# Pytest / coverage
+# =========================
+.pytest_cache/
+.coverage
+htmlcov/
+
+# =========================
+# IDE / Editor configs
+# =========================
+.idea/
+.vscode/
+
+# =========================
+# Alembic / migration cache
+# =========================
+alembic/versions/__pycache__/
+
+# =========================
+# OS junk
+# =========================
+.DS_Store
+Thumbs.db
